# crud-with-docker

./: compose.yml
crud/: .env  Dockerfile  pyproject.toml
crud/app/: main.py
crud/app/database/: connection.py  db_config.py
crud/app/model/: todo.py
